--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
 	</head>
 	<body>
 		<canvas id="granim-canvas"></canvas>
+		<div class="marquee__container">
+      <div class="bottom-line__text marquee">
+        <div class="marquee__text">
+          <span class="underlined">Hey! These are the platforms where you can follow me: Behance — Instagram — Dribble — Codepen — Github
+        </div>
+      </div>
+    </div>
 		<div class="header__container">
 			<div class="header__text jello animated">Hi there, my name is Filippo Gianessi, I’m 25 and I’m an italian designer and coder. Right now I’m working at ideato.
 			</div>
 			<div class="header__secondary-text">Here you can find some of my works!</div>
 		</div>
-		<div class="links__container"  >
+		<div class="links__container">
 			<a href=""><div class="links__item" id="instagram" >Instagram</div></a>
 			<a href=""><div class="links__item" id="noun-project">The Noun Project</div></a>
 			<a href=""><div class="links__item" id="behance">Behance</div></a>
@@ -35,7 +42,58 @@
 		<div class="divider__container">
 			<div class="divider__header"> </div>
 		</div>
+		<div class="header__secondary-text">This is what I do —</div>
+		<div class="services__container">
+
+			<div class="service__container">
+				<div> <img src="asset/icons/user-experience.svg" class="resume__icon" alt=""></div>
+			<div class="service__text-container">
+				<div class="service__title">User experience design</div>
+				<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+					adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+					magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+				</div>
+			</div>
+			</div>
+
+			<div class="service__container">
+				<div> <img src="asset/icons/user-interface.svg" class="resume__icon" alt=""></div>
+				<div class="service__text-container">
+					<div class="service__title">User interface design</div>
+					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+					</div>
+				</div>
+			</div>
+
+			<div class="service__container">
+				<div> <img src="asset/icons/branding.svg" class="resume__icon" alt=""></div>
+				<div class="service__text-container">
+					<div class="service__title">Branding</div>
+					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+					</div>
+				</div>
+			</div>
+
+			<div class="service__container">
+				<div> <img src="asset/icons/editorial.svg" class="resume__icon" alt=""></div>
+				<div class="service__text-container">
+					<div class="service__title">Editorial design</div>
+					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="header__secondary-text">— and this is what I did</div>
+
 		<div class="resume__container">
+
 
 			<div class="jobs__container">
 				<div> <img src="asset/icons/work-experience.svg" class="resume__icon" alt=""></div>
@@ -45,27 +103,27 @@
 				<div class="resume__text">2016</div>
 				<div class="resume__text">UI/UX and interaction designer at <a href="" class="resume__link">Small city, big stories</a>: a visual journalism project</div>
 				<div class="resume__text"></div>
-				<div class="resume__text">Started an internship at ideato as a UI/UX - interaction designer</div>
+				<div class="resume__text">Started an internship at <a href="" class="resume__link">ideato</a> as a UI/UX - interaction designer</div>
 				<div class="resume__text">2015</div>
-				<div class="resume__text">Visual and motion designer at YCBS (Berlin): graphic and motion design for media production</div>
+				<div class="resume__text">Visual and motion designer at YCBS (Berlin)</div>
 				<div class="resume__text"></div>
 				<div class="resume__text">Visual designer at Collettivo gg</div>
 				<div class="resume__text">2014</div>
-				<div class="resume__text">Web designer at Salesiani 2.0</div>
+				<div class="resume__text">Designer at <a href="" class="resume__link">Contamination Lab</a></div>
 				<div class="resume__text"></div>
-				<div class="resume__text">Graphic designer at Polaris Editore, Vicchio (FI)</div>
+				<div class="resume__text">Graphic designer at <a href="" class="resume__link">Polaris Editore</a></div>
 				<div class="resume__text">2013-12</div>
 				<div class="resume__text">Graphic designer at Carta Bianca publisher and printshop</div>
 				<div><img src="asset/icons/contributions.svg" class="resume__icon" alt=""></div>
 				<div class="resume__title">Contributions</div>
 				<div class="resume__text">2017</div>
-				<div class="resume__text">Volunteer for GRUSP at Javascript day in Verona (Italy)</div>
+				<div class="resume__text">Volunteer for <a href="#" class="resume__link">GRUSP</a> at <a href="#" class="resume__link">Javascript day</a> in Verona (Italy)</div>
 				<div class="resume__text"></div>
 				<div class="resume__text">Volunteer for GRUSP at CSS day in Faenza (Italy)</div>
 				<div class="resume__text">2016</div>
 				<div class="resume__text">Designer during Museomix 2017, at Museo Carlo Zauli</div>
 				<div></div>
-				<div class="resume__text">Contribution as a hosted designer with La Scuola Open Source for Italianism's "10 parole" contest</div>
+				<div class="resume__text">Contribution with La Scuola Open Source for Italianism's "10 parole" contest</div>
 				<div><img src="asset/icons/prizes.svg" class="resume__icon" alt=""></div>
 				<div class="resume__title">Prizes</div>
 				<div class="resume__text">2016</div>
@@ -78,10 +136,9 @@
 				<div><img src="asset/icons/education.svg" class="resume__icon" alt=""></div>
 				<div class="resume__title">Education</div>
 				<div class="resume__text">2017</div>
-				<div class="resume__text">Responsive Web Typography: a workshop with Richard Rutter (Founder of Clearleft)</div>
+				<div class="resume__text">Responsive Web Typography: a workshop with Richard Rutter </div>
 				<div class="resume__text"></div>
-				<div class="resume__text">The UX Hero Workshop -
-Techniques, processes and tools used for experiential design of large products with Hoang Huynh</div>
+				<div class="resume__text">The UX Hero Workshop - with Hoang Huynh</div>
 				<div class="resume__text"></div>
 				<div class="resume__text">Service design thinking: a workshop with Antti Kares and Timo Sirviö</div>
 				<div class="resume__text">2016</div>
@@ -89,17 +146,17 @@ Techniques, processes and tools used for experiential design of large products w
 				<div class="resume__text"></div>
 				<div class="resume__text">Color and color-metrics: With Enrico Versari and Adalberto Monti</div>
 				<div class="resume__text"></div>
-				<div class="resume__text">Anatomy of a Magazine: a workshop with Davide Mottes (Art director at IL Magazine)</div>
+				<div class="resume__text">Anatomy of a Magazine: a workshop with Davide Mottes</div>
 				<div class="resume__text"></div>
-				<div class="resume__text">Business model canvas: a workshop with Matteo Mura (Associate Professor at Department of Management - University of Bologna) </div>
+				<div class="resume__text">Business model canvas: a workshop with Matteo Mura</div>
 				<div class="resume__text">2015</div>
-				<div class="resume__text">The New Aesthetic of Data Narrative: a workshop with Francesco Franchi (Art director at LaRepubblica) and Nicholas Felton (Information designer at Feltron)</div>
+				<div class="resume__text">The New Aesthetic of Data Narrative: a workshop with Francesco Franchi and Nicholas Felton</div>
 				<div class="resume__text"></div>
 				<div class="resume__text">Started studying computer science at University of Bologna </div>
 				<div class="resume__text">2014</div>
 				<div class="resume__text">Bachelor degree in communication and product design at ISIA Faenza (evaluation: 110/110)</div>
 				<div class="resume__text"></div>
-				<div class="resume__text">REACTION/REAZIONE Information Design Workshop with Martin Foessleitner (Founder and Managing Director at Hi-Pe, MBA Vienna University of Economics and Business), Giuseppe Attoma (CEO at Attoma Paris) and CFI - Multicultural Organizational Psychology</div>
+				<div class="resume__text">REACTION/REAZIONE Information Design Workshop with Martin Foessleitner, Giuseppe Attoma and CFI - Multicultural Organizational Psychology</div>
 			</div>
 		</div>
 		<div class="credits__container">
@@ -107,7 +164,7 @@ Techniques, processes and tools used for experiential design of large products w
 		</div>
 
     <div class="change-ss__container fadeInDown animated">
-      <div class="change-ss__text">Tap everywhere to change the font!</div>
+      <div class="change-ss__text">Tap everywhere to change the <a href="#" class="resume__link">ss</a>!</div>
     </div>
 
 	<script>
@@ -120,10 +177,10 @@ Techniques, processes and tools used for experiential design of large products w
 	    states : {
 	        "default-state": {
 	            gradients: [
-								['#005AFF', '#68E0E6'],
-	              ['#ff6666', '#000'],
-								['#ff3f4a', '#7fff84'],
-								['#cc0033', '#eee'],
+								['#0075ff', '#2137ff'],
+	              ['#00baff', '#0066ff'],
+								['#004fff', '#6900ff'],
+								['#0085ff', '#45e2fe'],
 
                 ]
 	        }
