--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 		<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<script src="js/jquery.js"></script>
-		<!-- include jQuery -->
 		<script src="js/plugins.js"></script>
-		<!-- include jQuery -->
 		<script src="js/jquery.main.js"></script>
 		<script src="granim.min.js"></script>
 		<link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
@@ -22,7 +20,7 @@
 		<div class="marquee__container">
       <div class="bottom-line__text marquee">
         <div class="marquee__text">
-          <span class="underlined">Hey! These are the platforms where you can follow me: Behance — Instagram — Dribble — Codepen — Github
+          <span class="underlined">Hey! These are the platforms where you can follow me: <a href="#">Behance</a> — Instagram — Dribble — Codepen — Github
         </div>
       </div>
     </div>
