--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Filippo Gianessi</title>
 		<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="css/responsive.css">
+		<link rel="stylesheet" href="css/marquee.css">
 		<script src="js/jquery.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/jquery.main.js"></script>
@@ -20,7 +21,12 @@
 		<div class="marquee__container">
       <div class="bottom-line__text marquee">
         <div class="marquee__text">
-          <span class="underlined">Hey! These are the platforms where you can follow me: <a href="#">Behance</a> — Instagram — Dribble — Codepen — Github
+          <span class="underlined">Hey! These are the platforms where you can follow me:
+						<a href="#" class="marquee__link">→ Behance</a>
+						<a href="#" class="marquee__link">→ Instagram</a>
+						<a href="#" class="marquee__link">→ Dribble</a>
+						<a href="#" class="marquee__link">→ Codepeh</a>
+						<a href="#" class="marquee__link">→ Github</a>
         </div>
       </div>
     </div>
