--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 	<body>
 		<canvas id="granim-canvas"></canvas>
 		<div class="marquee__container">
-      <div class="bottom-line__text marquee">
+      <div class="marquee">
         <div class="marquee__text">
           <span class="underlined">Hey! These are the platforms where you can follow me:
-						<a href="#" class="marquee__link">→ Behance</a>
-						<a href="#" class="marquee__link">→ Instagram</a>
-						<a href="#" class="marquee__link">→ Dribble</a>
-						<a href="#" class="marquee__link">→ Codepeh</a>
-						<a href="#" class="marquee__link">→ Github</a>
+						→ <a href="#" class="marquee__link">Behance</a>
+						→ <a href="#" class="marquee__link">Instagram</a>
+						→ <a href="#" class="marquee__link">Dribble</a>
+						→ <a href="#" class="marquee__link">Codepeh</a>
+						→ <a href="#" class="marquee__link">Github</a>
         </div>
       </div>
     </div>
