--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
       </div>
     </div>
-		<div class="header__container">
-			<div class="header__text jello animated">Hi there, my name is Filippo Gianessi, I’m 25 and I’m an italian designer and coder. Right now I’m working at ideato.
+		<div class="intro__container">
+			<div class="intro__text jello animated">Hi there, my name is Filippo Gianessi, I’m 25 and I’m an italian designer and coder. Right now I’m working at ideato.
 			</div>
-			<div class="header__logo">
+			<div class="intro__logo">
 				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="150px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
 					<style type="text/css">
 						.st0{fill:none;stroke:#ffffff;stroke-width:5;stroke-miterlimit:10;}
