--- a/index.html
+++ b/index.html
@@ -52,62 +52,64 @@
 					<circle class="st0" cx="75.4" cy="75.6" r="69.9"></circle>
 				</svg>
 			</div>
-		<div class="divider__container">
-			<div class="divider__header"> </div>
 		</div>
-		<div class="header__secondary-text">This is what I do —</div>
-		<div class="services__container">
 
-			<div class="service__container">
-				<div> <img src="asset/icons/user-experience.svg" class="resume__icon" alt=""></div>
-			<div class="service__text-container">
-				<div class="service__title">User experience design</div>
-				<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-					adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-					magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-				</div>
-			</div>
-			</div>
+		<div class="divider__container"><div class="divider__header"></div></div>
 
-			<div class="service__container">
-				<div> <img src="asset/icons/user-interface.svg" class="resume__icon" alt=""></div>
+		<div class="services">
+			<div class="header__secondary-text">This is what I do —</div>
+			<div class="services__container">
+				<div class="service__container">
+					<div> <img src="asset/icons/user-experience.svg" class="resume__icon" alt=""></div>
 				<div class="service__text-container">
-					<div class="service__title">User interface design</div>
+					<div class="service__title">User experience design</div>
 					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
 					</div>
 				</div>
-			</div>
-
-			<div class="service__container">
-				<div> <img src="asset/icons/branding.svg" class="resume__icon" alt=""></div>
-				<div class="service__text-container">
-					<div class="service__title">Branding</div>
-					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+				</div>
+				<div class="service__container">
+					<div> <img src="asset/icons/user-interface.svg" class="resume__icon" alt=""></div>
+					<div class="service__text-container">
+						<div class="service__title">User interface design</div>
+						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="service__container">
-				<div> <img src="asset/icons/editorial.svg" class="resume__icon" alt=""></div>
-				<div class="service__text-container">
-					<div class="service__title">Editorial design</div>
-					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+				<div class="service__container">
+					<div> <img src="asset/icons/branding.svg" class="resume__icon" alt=""></div>
+					<div class="service__text-container">
+						<div class="service__title">Branding</div>
+						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+						</div>
+					</div>
+				</div>
+
+				<div class="service__container">
+					<div> <img src="asset/icons/editorial.svg" class="resume__icon" alt=""></div>
+					<div class="service__text-container">
+						<div class="service__title">Editorial design</div>
+						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+
+
+
 
 		<div class="header__secondary-text">— and this is what I did</div>
-
 		<div class="resume__container">
-
-
 			<div class="jobs__container">
 				<div> <img src="asset/icons/work-experience.svg" class="resume__icon" alt=""></div>
 				<div class="resume__title">Work experience</div>
