--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
     </div>
 		<div class="intro__container">
-			<div class="intro__text jello animated">Hi there, my name is Filippo Gianessi, I’m 25 and I’m an italian designer and coder. Right now I’m working at ideato.
-			</div>
+			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, I’m 25 and I’m an italian designer and coder. Right now I’m working at ideato.
+			</h1>
 			<div class="intro__logo">
 				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="150px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
 					<style type="text/css">
@@ -53,11 +53,8 @@
 				</svg>
 			</div>
 		</div>
-
-		<div class="divider__container"><div class="divider__header"></div></div>
-
 		<div class="services">
-			<div class="header__secondary-text">This is what I do —</div>
+			<h2>This is what I do</h2>
 			<div class="services__container">
 				<div class="service__container">
 					<div> <img src="asset/icons/user-experience.svg" class="resume__icon" alt=""></div>
@@ -103,9 +100,6 @@
 				</div>
 			</div>
 		</div>
-
-
-
 
 
 		<div class="header__secondary-text">— and this is what I did</div>
