--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="stylesheet" href="css/marquee.css">
+		<link rel="stylesheet" href="css/typography.css">
+
 		<script src="js/jquery.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/jquery.main.js"></script>
