--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="stylesheet" href="css/marquee.css">
 		<link rel="stylesheet" href="css/typography.css">
+		<link rel="stylesheet" href="css/services.css">
+
 
 		<script src="js/jquery.js"></script>
 		<script src="js/plugins.js"></script>
@@ -56,7 +58,7 @@
 			</div>
 		</div>
 		<div class="services">
-			<h2>This is what I do</h2>
+			<h2 class="services__title">This is what I do</h2>
 			<div class="services__container">
 				<div class="service__container">
 					<div> <img src="asset/icons/user-experience.svg" class="resume__icon" alt=""></div>
