--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       </div>
     </div>
 		<div class="intro__container">
-			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, I’m 25 and I’m an italian designer and coder. Right now I’m working at ideato.
+			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, I’m 26 and I’m an italian designer and coder. Right now I’m working at ideato.
 			</h1>
 			<div class="intro__logo">
-				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="150px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
+				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="250px" height="250px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
 					<style type="text/css">
 						.st0{fill:none;stroke:#ffffff;stroke-width:5;stroke-miterlimit:10;}
 						.st1{fill:#ffffff;}
@@ -61,7 +61,7 @@
 			<h2 class="services__title">This is what I do</h2>
 			<div class="services__container">
 				<div class="service__container">
-					<div> <img src="asset/icons/user-experience.svg" class="resume__icon" alt=""></div>
+					<div> <img src="asset/icons/user-experience.svg" class="service__icon" alt=""></div>
 				<div class="service__text-container">
 					<div class="service__title">User experience design</div>
 					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
@@ -71,7 +71,7 @@
 				</div>
 				</div>
 				<div class="service__container">
-					<div> <img src="asset/icons/user-interface.svg" class="resume__icon" alt=""></div>
+					<div> <img src="asset/icons/user-interface.svg" class="service__icon" alt=""></div>
 					<div class="service__text-container">
 						<div class="service__title">User interface design</div>
 						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
@@ -82,7 +82,7 @@
 				</div>
 
 				<div class="service__container">
-					<div> <img src="asset/icons/branding.svg" class="resume__icon" alt=""></div>
+					<div> <img src="asset/icons/branding.svg" class="service__icon" alt=""></div>
 					<div class="service__text-container">
 						<div class="service__title">Branding</div>
 						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
@@ -93,7 +93,7 @@
 				</div>
 
 				<div class="service__container">
-					<div> <img src="asset/icons/editorial.svg" class="resume__icon" alt=""></div>
+					<div> <img src="asset/icons/editorial.svg" class="service__icon" alt=""></div>
 					<div class="service__text-container">
 						<div class="service__title">Editorial design</div>
 						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
