--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="css/marquee.css">
 		<link rel="stylesheet" href="css/typography.css">
 		<link rel="stylesheet" href="css/services.css">
+		<link rel="stylesheet" href="css/showreel.css">
+
 
 
 		<script src="js/jquery.js"></script>
@@ -172,6 +174,16 @@
 				<div class="resume__text">REACTION/REAZIONE Information Design Workshop with Martin Foessleitner, Giuseppe Attoma and CFI - Multicultural Organizational Psychology</div>
 			</div>
 		</div>
+
+		<div class="showreel">
+			<div class="showreel__container">
+				<div class="showreel__image">
+					<img src="" alt="">
+				</div>
+			</div>
+		</div>
+
+
 		<div class="credits__container">
 			<div class="credits__text">This website is made with Freak Grotesque Next by La Scuola Open Source <3</div>
 		</div>
