--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
 		</div>
 
 		<div class="showreel">
+			<h2 class="showreel__title">
+				Selected works
+			</h2>
 			<div class="showreel__container">
 				<div class="showreel__image">
 					<img src="" alt="">
