--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		</div>
 
 
-		<div class="header__secondary-text">— and this is what I did</div>
+		<!-- <div class="header__secondary-text">— and this is what I did</div>
 		<div class="resume__container">
 			<div class="jobs__container">
 				<div> <img src="asset/icons/work-experience.svg" class="resume__icon" alt=""></div>
@@ -173,7 +173,7 @@
 				<div class="resume__text"></div>
 				<div class="resume__text">REACTION/REAZIONE Information Design Workshop with Martin Foessleitner, Giuseppe Attoma and CFI - Multicultural Organizational Psychology</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="showreel">
 			<h2 class="showreel__title">
