--- a/index.html
+++ b/index.html
@@ -197,9 +197,7 @@
 
 
 		<div class="credits__container">
-			<div class="credits__text">Click here to see my resume →
-
-			</div>
+			<div class="credits__text"><span>Click here to see my resume</span> →</div>
 			<div class="credits__text">This website is made with Freak Grotesque Next by La Scuola Open Source <3</div>
 		</div>
 
