--- a/index.html
+++ b/index.html
@@ -180,17 +180,39 @@
 				Selected works
 			</h2>
 			<div class="showreel__container">
-				<div class="showreel__image" id="image-1"></div>
-				<div class="showreel__image" id="image-2"></div>
-				<div class="showreel__image" id="image-3"></div>
-				<div class="showreel__image" id="image-4"></div>
-				<div class="showreel__image" id="image-5"></div>
-				<div class="showreel__image" id="image-6"></div>
-				<div class="showreel__image" id="image-7"></div>
-				<div class="showreel__image" id="image-8"></div>
-				<div class="showreel__image" id="image-9"></div>
-				<div class="showreel__image" id="image-10"></div>
-				<div class="showreel__image" id="image-11"></div>
+				<div class="showreel__image">
+					<img src="asset/showreel/1.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/5.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/11.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/4.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/9.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/2.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/3.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/6.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/7.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/8.png" alt="">
+				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/10.png" alt="">
+				</div>
 			</div>
 		</div>
 
