--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
 				<div class="showreel__image">
 					<img src="asset/showreel/10.png" alt="">
 				</div>
+				<div class="showreel__image">
+					<img src="asset/showreel/12.png" alt="">
+				</div>
 			</div>
 		</div>
 
