--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 		<div class="intro__container">
 			<canvas id="granim-canvas"></canvas>
-			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Right now I’m working at ideato.
+			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, and I live in Faenza (Italy). I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Working at <a href="https://www.ideato.it" target="_blank">ideato</a> →.
 			</h1>
 			<div class="intro__logo">
 				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="250px" height="250px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
