--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 		<link rel="stylesheet" href="css/typography.css">
 		<link rel="stylesheet" href="css/services.css">
 		<link rel="stylesheet" href="css/showreel.css">
-
-
-
 		<script src="js/jquery.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/jquery.main.js"></script>
@@ -35,6 +32,7 @@
         </div>
       </div>
     </div>
+
 		<div class="intro__container">
 			<canvas id="granim-canvas"></canvas>
 			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, and I live in Faenza (Italy). I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Working at <a href="https://www.ideato.it" target="_blank">ideato</a> →.
@@ -59,6 +57,7 @@
 				</svg>
 			</div>
 		</div>
+
 		<div class="services">
 			<h2 class="services__title">This is what I do</h2>
 			<div class="services__container">
@@ -107,74 +106,6 @@
 			</div>
 		</div>
 
-
-		<!-- <div class="header__secondary-text">— and this is what I did</div>
-		<div class="resume__container">
-			<div class="jobs__container">
-				<div> <img src="asset/icons/work-experience.svg" class="resume__icon" alt=""></div>
-				<div class="resume__title">Work experience</div>
-				<div class="resume__text">2017</div>
-				<div class="resume__text">Still working as a UI/UX and interaction designer at <a href="" class="resume__link">ideato</a></div>
-				<div class="resume__text">2016</div>
-				<div class="resume__text">UI/UX and interaction designer at <a href="" class="resume__link">Small city, big stories</a>: a visual journalism project</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Started an internship at <a href="" class="resume__link">ideato</a> as a UI/UX - interaction designer</div>
-				<div class="resume__text">2015</div>
-				<div class="resume__text">Visual and motion designer at YCBS (Berlin)</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Visual designer at Collettivo gg</div>
-				<div class="resume__text">2014</div>
-				<div class="resume__text">Designer at <a href="" class="resume__link">Contamination Lab</a></div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Graphic designer at <a href="" class="resume__link">Polaris Editore</a></div>
-				<div class="resume__text">2013-12</div>
-				<div class="resume__text">Graphic designer at Carta Bianca publisher and printshop</div>
-				<div><img src="asset/icons/contributions.svg" class="resume__icon" alt=""></div>
-				<div class="resume__title">Contributions</div>
-				<div class="resume__text">2017</div>
-				<div class="resume__text">Volunteer for <a href="#" class="resume__link">GRUSP</a> at <a href="#" class="resume__link">Javascript day</a> in Verona (Italy)</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Volunteer for GRUSP at CSS day in Faenza (Italy)</div>
-				<div class="resume__text">2016</div>
-				<div class="resume__text">Designer during Museomix 2017, at Museo Carlo Zauli</div>
-				<div></div>
-				<div class="resume__text">Contribution with La Scuola Open Source for Italianism's "10 parole" contest</div>
-				<div><img src="asset/icons/prizes.svg" class="resume__icon" alt=""></div>
-				<div class="resume__title">Prizes</div>
-				<div class="resume__text">2016</div>
-				<div class="resume__text">Panorama's startup prize with Small city, big stories (Panorama d'Italia)</div>
-				<div></div>
-				<div class="resume__text">Call for the assignment of Salesiani 2.0 and Contamination Lab' brand identities</div>
-			</div>
-
-			<div class="education__container">
-				<div><img src="asset/icons/education.svg" class="resume__icon" alt=""></div>
-				<div class="resume__title">Education</div>
-				<div class="resume__text">2017</div>
-				<div class="resume__text">Responsive Web Typography: a workshop with Richard Rutter </div>
-				<div class="resume__text"></div>
-				<div class="resume__text">The UX Hero Workshop - with Hoang Huynh</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Service design thinking: a workshop with Antti Kares and Timo Sirviö</div>
-				<div class="resume__text">2016</div>
-				<div class="resume__text">XYZ: Three research and cooperative LABS to co-design La Scuola Open Source in Bari (Italy)</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Color and color-metrics: With Enrico Versari and Adalberto Monti</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Anatomy of a Magazine: a workshop with Davide Mottes</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Business model canvas: a workshop with Matteo Mura</div>
-				<div class="resume__text">2015</div>
-				<div class="resume__text">The New Aesthetic of Data Narrative: a workshop with Francesco Franchi and Nicholas Felton</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">Started studying computer science at University of Bologna </div>
-				<div class="resume__text">2014</div>
-				<div class="resume__text">Bachelor degree in communication and product design at ISIA Faenza (evaluation: 110/110)</div>
-				<div class="resume__text"></div>
-				<div class="resume__text">REACTION/REAZIONE Information Design Workshop with Martin Foessleitner, Giuseppe Attoma and CFI - Multicultural Organizational Psychology</div>
-			</div>
-		</div> -->
-
 		<div class="showreel">
 			<h2 class="showreel__title">
 				Selected works
@@ -219,9 +150,8 @@
 			</div>
 		</div>
 
-
 		<div class="credits__container">
-			<div class="credits__text"><span>Click here to see my resume</span> →</div>
+			<div class="credits__text"><a href="resume.html">Click here to see my resume</a> →</div>
 			<div class="credits__text">This website is made with Freak Grotesque Next by La Scuola Open Source <3</div>
 		</div>
 
@@ -273,7 +203,6 @@
 	</script>
 	<script src="js/buttonHover.js"></script>
 	<script src="js/fontRandomize.js"></script>
-		<!-- include jQuery -->
 
 
 	</body>
