--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 
 	</head>
-	<body>
+	<body class="contentPost">
 		<div class="marquee__container">
       <div class="marquee">
         <div class="marquee__text">
@@ -203,6 +203,13 @@
 	</script>
 	<script src="js/buttonHover.js"></script>
 	<script src="js/fontRandomize.js"></script>
+
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$(".contentPost").delay(2000).fadeIn(500);
+		});
+	</script>
+
 
 
 	</body>
