--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$(".contentPost").delay(10000).fadeIn(500);
-			});
-		</script>
 
 	</head>
 	<body class="contentPost">
@@ -208,6 +203,8 @@
 	</script>
 	<script src="js/buttonHover.js"></script>
 	<script src="js/fontRandomize.js"></script>
+	<script src="js/pageLoading.js"></script>
+
 
 
 
