--- a/index.html
+++ b/index.html
@@ -19,167 +19,178 @@
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 
 	</head>
-	<body class="contentPost">
-		<div class="marquee__container">
-      <div class="marquee">
-        <div class="marquee__text">
-          <span class="underlined">Hey! These are the platforms where you can follow me:
-						→ <a href="#" class="marquee__link">Behance</a>
-						→ <a href="#" class="marquee__link">Instagram</a>
-						→ <a href="#" class="marquee__link">Dribble</a>
-						→ <a href="#" class="marquee__link">Codepeh</a>
-						→ <a href="#" class="marquee__link">Github</a>
-        </div>
-      </div>
-    </div>
 
-		<div class="intro__container">
-			<canvas id="granim-canvas"></canvas>
-			<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, and I live in Faenza (Italy). I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Working at <a href="https://www.ideato.it" target="_blank">ideato</a> →.
-			</h1>
-			<div class="intro__logo">
-				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="250px" height="250px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
-					<style type="text/css">
-						.st0{fill:none;stroke:#ffffff;stroke-width:5;stroke-miterlimit:10;}
-						.st1{fill:#ffffff;}
-					</style>
-					<g>
-						<path class="st1" d="M34,66.8h3.9v-9.4h10.5v4.8h-5v4.6h4.6v4.8h-4.6v16.8h-5.5V71.6H34V66.8z"></path>
-						<path class="st1" d="M54.4,73.7h33.7v4.7H54.4V73.7z"></path>
-						<path class="st1" d="M96.5,86.5c-0.8-1-1.2-2.2-1.2-3.7c0-1.7,1.2-3.5,2.4-4.5c-0.6-1.1-1-2.4-1-4c0-4.7,3.9-7.7,8.8-7.7
-						c0.5,0,1,0,1.4,0.1l1.4-4c3.6,0.9,6.1,2.5,8.1,5.7l-3,2.5c0.5,1,0.8,2.3,0.8,3.6c0,4.9-4,7.9-8.8,7.9c-1.3,0-3.1-0.3-4.7-1.1
-						c-0.4,0.4-0.6,0.9-0.6,1.3c0,1.5,1.4,2.2,5.5,2.2c6.7,0,10.3,1.9,10.3,6.6c0,4.4-3.3,7-10.3,7c-4.4,0-10.8-1.7-10.8-7.4
-						C94.8,89.2,95.5,87.5,96.5,86.5z M105.7,94c3.9,0,5.6-0.8,5.6-2.4c0-1.5-1.9-2.3-5.2-2.3c-3.8,0-5.2-0.1-6.3-0.8
-						c-0.5,0.6-0.7,1.5-0.5,2.4C99.5,92.8,102.4,94,105.7,94z M105.6,78.1c2.3,0,3.6-1.6,3.6-3.7s-1.3-3.8-3.6-3.8
-						c-2.3,0-3.6,1.7-3.6,3.8S103.2,78.1,105.6,78.1z"></path>
-					</g>
-					<circle class="st0" cx="75.4" cy="75.6" r="69.9"></circle>
-				</svg>
+	<script type="text/javascript">
+		$(window).load(function() {
+		// Animate loader off screen
+		$(".se-pre-con").fadeOut("slow");;
+	});
+	</script>
+	
+	<body>
+		<div class="se-pre-con">
+			<div class="marquee__container">
+	      <div class="marquee">
+	        <div class="marquee__text">
+	          <span class="underlined">Hey! These are the platforms where you can follow me:
+							→ <a href="#" class="marquee__link">Behance</a>
+							→ <a href="#" class="marquee__link">Instagram</a>
+							→ <a href="#" class="marquee__link">Dribble</a>
+							→ <a href="#" class="marquee__link">Codepeh</a>
+							→ <a href="#" class="marquee__link">Github</a>
+	        </div>
+	      </div>
+	    </div>
+
+			<div class="intro__container">
+				<canvas id="granim-canvas"></canvas>
+				<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, and I live in Faenza (Italy). I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Working at <a href="https://www.ideato.it" target="_blank">ideato</a> →.
+				</h1>
+				<div class="intro__logo">
+					<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="250px" height="250px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
+						<style type="text/css">
+							.st0{fill:none;stroke:#ffffff;stroke-width:5;stroke-miterlimit:10;}
+							.st1{fill:#ffffff;}
+						</style>
+						<g>
+							<path class="st1" d="M34,66.8h3.9v-9.4h10.5v4.8h-5v4.6h4.6v4.8h-4.6v16.8h-5.5V71.6H34V66.8z"></path>
+							<path class="st1" d="M54.4,73.7h33.7v4.7H54.4V73.7z"></path>
+							<path class="st1" d="M96.5,86.5c-0.8-1-1.2-2.2-1.2-3.7c0-1.7,1.2-3.5,2.4-4.5c-0.6-1.1-1-2.4-1-4c0-4.7,3.9-7.7,8.8-7.7
+							c0.5,0,1,0,1.4,0.1l1.4-4c3.6,0.9,6.1,2.5,8.1,5.7l-3,2.5c0.5,1,0.8,2.3,0.8,3.6c0,4.9-4,7.9-8.8,7.9c-1.3,0-3.1-0.3-4.7-1.1
+							c-0.4,0.4-0.6,0.9-0.6,1.3c0,1.5,1.4,2.2,5.5,2.2c6.7,0,10.3,1.9,10.3,6.6c0,4.4-3.3,7-10.3,7c-4.4,0-10.8-1.7-10.8-7.4
+							C94.8,89.2,95.5,87.5,96.5,86.5z M105.7,94c3.9,0,5.6-0.8,5.6-2.4c0-1.5-1.9-2.3-5.2-2.3c-3.8,0-5.2-0.1-6.3-0.8
+							c-0.5,0.6-0.7,1.5-0.5,2.4C99.5,92.8,102.4,94,105.7,94z M105.6,78.1c2.3,0,3.6-1.6,3.6-3.7s-1.3-3.8-3.6-3.8
+							c-2.3,0-3.6,1.7-3.6,3.8S103.2,78.1,105.6,78.1z"></path>
+						</g>
+						<circle class="st0" cx="75.4" cy="75.6" r="69.9"></circle>
+					</svg>
+				</div>
 			</div>
-		</div>
 
-		<div class="services">
-			<h2 class="services__title">This is what I do</h2>
-			<div class="services__container">
-				<div class="service__container">
-					<div> <img src="asset/icons/user-experience.svg" class="service__icon" alt=""></div>
-				<div class="service__text-container">
-					<div class="service__title">User experience design</div>
-					<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-					</div>
-				</div>
-				</div>
-				<div class="service__container">
-					<div> <img src="asset/icons/user-interface.svg" class="service__icon" alt=""></div>
+			<div class="services">
+				<h2 class="services__title">This is what I do</h2>
+				<div class="services__container">
+					<div class="service__container">
+						<div> <img src="asset/icons/user-experience.svg" class="service__icon" alt=""></div>
 					<div class="service__text-container">
-						<div class="service__title">User interface design</div>
+						<div class="service__title">User experience design</div>
 						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
 							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
 						</div>
 					</div>
-				</div>
+					</div>
+					<div class="service__container">
+						<div> <img src="asset/icons/user-interface.svg" class="service__icon" alt=""></div>
+						<div class="service__text-container">
+							<div class="service__title">User interface design</div>
+							<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+								adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+								magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+							</div>
+						</div>
+					</div>
 
-				<div class="service__container">
-					<div> <img src="asset/icons/branding.svg" class="service__icon" alt=""></div>
-					<div class="service__text-container">
-						<div class="service__title">Branding</div>
-						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+					<div class="service__container">
+						<div> <img src="asset/icons/branding.svg" class="service__icon" alt=""></div>
+						<div class="service__text-container">
+							<div class="service__title">Branding</div>
+							<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+								adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+								magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+							</div>
+						</div>
+					</div>
+
+					<div class="service__container">
+						<div> <img src="asset/icons/editorial.svg" class="service__icon" alt=""></div>
+						<div class="service__text-container">
+							<div class="service__title">Editorial design</div>
+							<div class="service__text">Lorem ipsum dolor sit amet, consectetur
+								adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+								magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+							</div>
 						</div>
 					</div>
 				</div>
+			</div>
 
-				<div class="service__container">
-					<div> <img src="asset/icons/editorial.svg" class="service__icon" alt=""></div>
-					<div class="service__text-container">
-						<div class="service__title">Editorial design</div>
-						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-						</div>
+			<div class="showreel">
+				<h2 class="showreel__title">
+					Selected works
+				</h2>
+				<div class="showreel__container">
+					<div class="showreel__image">
+						<img src="asset/showreel/1.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/5.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/11.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/4.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/9.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/2.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/3.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/6.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/7.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/8.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/10.png" alt="">
+					</div>
+					<div class="showreel__image">
+						<img src="asset/showreel/12.png" alt="">
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="showreel">
-			<h2 class="showreel__title">
-				Selected works
-			</h2>
-			<div class="showreel__container">
-				<div class="showreel__image">
-					<img src="asset/showreel/1.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/5.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/11.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/4.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/9.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/2.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/3.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/6.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/7.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/8.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/10.png" alt="">
-				</div>
-				<div class="showreel__image">
-					<img src="asset/showreel/12.png" alt="">
+			<div class="credits__container">
+				<div class="credits__text"><a href="resume.html">Click here to see my resume</a> →</div>
+				<div class="credits__text">This website is made with Freak Grotesque Next by La Scuola Open Source <3</div>
+			</div>
+
+			<div class="madeby__container">
+				<div class="madeby__logo">
+					<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
+						<style type="text/css">
+							.st0{fill:none;stroke:#ffffff;stroke-width:5;stroke-miterlimit:10;}
+							.st1{fill:#ffffff;}
+						</style>
+						<g>
+							<path class="st1" d="M34,66.8h3.9v-9.4h10.5v4.8h-5v4.6h4.6v4.8h-4.6v16.8h-5.5V71.6H34V66.8z"></path>
+							<path class="st1" d="M54.4,73.7h33.7v4.7H54.4V73.7z"></path>
+							<path class="st1" d="M96.5,86.5c-0.8-1-1.2-2.2-1.2-3.7c0-1.7,1.2-3.5,2.4-4.5c-0.6-1.1-1-2.4-1-4c0-4.7,3.9-7.7,8.8-7.7
+							c0.5,0,1,0,1.4,0.1l1.4-4c3.6,0.9,6.1,2.5,8.1,5.7l-3,2.5c0.5,1,0.8,2.3,0.8,3.6c0,4.9-4,7.9-8.8,7.9c-1.3,0-3.1-0.3-4.7-1.1
+							c-0.4,0.4-0.6,0.9-0.6,1.3c0,1.5,1.4,2.2,5.5,2.2c6.7,0,10.3,1.9,10.3,6.6c0,4.4-3.3,7-10.3,7c-4.4,0-10.8-1.7-10.8-7.4
+							C94.8,89.2,95.5,87.5,96.5,86.5z M105.7,94c3.9,0,5.6-0.8,5.6-2.4c0-1.5-1.9-2.3-5.2-2.3c-3.8,0-5.2-0.1-6.3-0.8
+							c-0.5,0.6-0.7,1.5-0.5,2.4C99.5,92.8,102.4,94,105.7,94z M105.6,78.1c2.3,0,3.6-1.6,3.6-3.7s-1.3-3.8-3.6-3.8
+							c-2.3,0-3.6,1.7-3.6,3.8S103.2,78.1,105.6,78.1z"></path>
+						</g>
+						<circle class="st0" cx="75.4" cy="75.6" r="69.9"></circle>
+					</svg>
 				</div>
 			</div>
+
+	    <div class="change-ss__container fadeInDown animated">
+	      <div class="change-ss__text">Tap everywhere to change the <a href="#" class="resume__link">ss</a>!</div>
+	    </div>
 		</div>
 
-		<div class="credits__container">
-			<div class="credits__text"><a href="resume.html">Click here to see my resume</a> →</div>
-			<div class="credits__text">This website is made with Freak Grotesque Next by La Scuola Open Source <3</div>
-		</div>
-
-		<div class="madeby__container">
-			<div class="madeby__logo">
-				<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
-					<style type="text/css">
-						.st0{fill:none;stroke:#ffffff;stroke-width:5;stroke-miterlimit:10;}
-						.st1{fill:#ffffff;}
-					</style>
-					<g>
-						<path class="st1" d="M34,66.8h3.9v-9.4h10.5v4.8h-5v4.6h4.6v4.8h-4.6v16.8h-5.5V71.6H34V66.8z"></path>
-						<path class="st1" d="M54.4,73.7h33.7v4.7H54.4V73.7z"></path>
-						<path class="st1" d="M96.5,86.5c-0.8-1-1.2-2.2-1.2-3.7c0-1.7,1.2-3.5,2.4-4.5c-0.6-1.1-1-2.4-1-4c0-4.7,3.9-7.7,8.8-7.7
-						c0.5,0,1,0,1.4,0.1l1.4-4c3.6,0.9,6.1,2.5,8.1,5.7l-3,2.5c0.5,1,0.8,2.3,0.8,3.6c0,4.9-4,7.9-8.8,7.9c-1.3,0-3.1-0.3-4.7-1.1
-						c-0.4,0.4-0.6,0.9-0.6,1.3c0,1.5,1.4,2.2,5.5,2.2c6.7,0,10.3,1.9,10.3,6.6c0,4.4-3.3,7-10.3,7c-4.4,0-10.8-1.7-10.8-7.4
-						C94.8,89.2,95.5,87.5,96.5,86.5z M105.7,94c3.9,0,5.6-0.8,5.6-2.4c0-1.5-1.9-2.3-5.2-2.3c-3.8,0-5.2-0.1-6.3-0.8
-						c-0.5,0.6-0.7,1.5-0.5,2.4C99.5,92.8,102.4,94,105.7,94z M105.6,78.1c2.3,0,3.6-1.6,3.6-3.7s-1.3-3.8-3.6-3.8
-						c-2.3,0-3.6,1.7-3.6,3.8S103.2,78.1,105.6,78.1z"></path>
-					</g>
-					<circle class="st0" cx="75.4" cy="75.6" r="69.9"></circle>
-				</svg>
-			</div>
-		</div>
-
-    <div class="change-ss__container fadeInDown animated">
-      <div class="change-ss__text">Tap everywhere to change the <a href="#" class="resume__link">ss</a>!</div>
-    </div>
 
 	<script>
 	var granimInstance = new Granim({
