--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,17 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<script type="text/javascript">
+			$(window).on('load', function(){
+				$('.preloader').addClass('complete')
+			})
+		</script>
 
 	</head>
 	<body>
+		<div class="preloader">
+
+		</div>
 
     <div class="marquee__container">
       <div class="marquee">
@@ -33,7 +41,7 @@
       </div>
     </div>
 
-    <!-- <div class="header__secondary-text">— and this is what I did</div>
+  <div class="header__secondary-text">— and this is what I did</div>
 		<div class="resume__container">
 			<div class="jobs__container">
 				<div> <img src="asset/icons/work-experience.svg" class="resume__icon" alt=""></div>
@@ -98,7 +106,7 @@
 				<div class="resume__text"></div>
 				<div class="resume__text">REACTION/REAZIONE Information Design Workshop with Martin Foessleitner, Giuseppe Attoma and CFI - Multicultural Organizational Psychology</div>
 			</div>
-		</div> -->
+		</div>
 
   <div class="credits__container">
     <div class="credits__text"><span>Click here to see my resume</span> →</div>
